lustre/osc/osc_lock.c
@@ -611,9 +611,8 @@ static int weigh_cb(const struct lu_env *env, struct cl_io *io,
 {
 	struct cl_page *page = ops->ops_cl.cpl_page;
 
-	if (cl_page_is_vmlocked(env, page)
-	    || PageDirty(page->cp_vmpage) || PageWriteback(page->cp_vmpage)
-	   )
+	if (cl_page_is_vmlocked(env, page) || PageDirty(page->cp_vmpage) ||
+	    PageWriteback(page->cp_vmpage))
 		return CLP_GANG_ABORT;
 
 	*(pgoff_t *)cbdata = osc_index(ops) + 1;
@@ -622,12 +621,13 @@ static int weigh_cb(const struct lu_env *env, struct cl_io *io,
 
 static unsigned long osc_lock_weight(const struct lu_env *env,
 				     struct osc_object *oscobj,
-				     struct ldlm_extent *extent)
+				     loff_t start, loff_t end)
 {
-	struct cl_io     *io = osc_env_thread_io(env);
+	struct cl_io *io = osc_env_thread_io(env);
 	struct cl_object *obj = cl_object_top(&oscobj->oo_cl);
-	pgoff_t          page_index;
-	int              result;
+	pgoff_t page_index;
+	int result;
+
 	ENTRY;
 
 	io->ci_obj = obj;
@@ -636,11 +636,10 @@ static unsigned long osc_lock_weight(const struct lu_env *env,
 	if (result != 0)
 		RETURN(result);
 
-	page_index = cl_index(obj, extent->start);
+	page_index = cl_index(obj, start);
 	do {
 		result = osc_page_gang_lookup(env, io, oscobj,
-					      page_index,
-					      cl_index(obj, extent->end),
+					      page_index, cl_index(obj, end),
 					      weigh_cb, (void *)&page_index);
 		if (result == CLP_GANG_ABORT)
 			break;
@@ -657,12 +656,13 @@ static unsigned long osc_lock_weight(const struct lu_env *env,
  */
 unsigned long osc_ldlm_weigh_ast(struct ldlm_lock *dlmlock)
 {
-	struct lu_env           *env;
-	struct osc_object	*obj;
-	struct osc_lock		*oscl;
-	unsigned long            weight;
-	bool			found = false;
-	__u16			refcheck;
+	struct lu_env *env;
+	struct osc_object *obj;
+	struct osc_lock *oscl;
+	unsigned long weight;
+	bool found = false;
+	__u16 refcheck;
+
 	ENTRY;
 
 	might_sleep();
@@ -678,7 +678,8 @@ unsigned long osc_ldlm_weigh_ast(struct ldlm_lock *dlmlock)
 		/* Mostly because lack of memory, do not eliminate this lock */
 		RETURN(1);
 
-	LASSERT(dlmlock->l_resource->lr_type == LDLM_EXTENT);
+	LASSERT(dlmlock->l_resource->lr_type == LDLM_EXTENT ||
+		ldlm_has_dom(dlmlock));
 	lock_res_and_lock(dlmlock);
 	obj = dlmlock->l_ast_data;
 	if (obj)
@@ -702,7 +703,13 @@ unsigned long osc_ldlm_weigh_ast(struct ldlm_lock *dlmlock)
 		GOTO(out, weight = 1);
 	}
 
-	weight = osc_lock_weight(env, obj, &dlmlock->l_policy_data.l_extent);
+	if (ldlm_has_dom(dlmlock))
+		weight = osc_lock_weight(env, obj, 0, OBD_OBJECT_EOF);
+	else
+		weight = osc_lock_weight(env, obj,
+					 dlmlock->l_policy_data.l_extent.start,
+					 dlmlock->l_policy_data.l_extent.end);
+
 	EXIT;
 
 out:
@@ -712,6 +719,7 @@ out:
 	cl_env_put(env, &refcheck);
 	return weight;
 }
+EXPORT_SYMBOL(osc_ldlm_weigh_ast);
 
 static void osc_lock_build_einfo(const struct lu_env *env,
 				 const struct cl_lock *lock,
